# bookcreep

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  bookcreep.db  notes.md  sqlx-data.json
migrations/: 20220715162851_CREATE_USERS_TABLE.sql  20220720044958_INSERT_VALID_TEST_USER.sql  20220722182634_CREATE_GUILDS_TABLE.sql
src/: discord.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/crawler/: crawler.rs  governed_client.rs  mod.rs  rss.rs
src/crawler/test_data/: data.xml
src/creeper/: book.rs  creeper.rs  mod.rs  user.rs
src/discord/: common.rs  mod.rs
src/discord/commands/: help.rs  lurk.rs  mod.rs  ping.rs  set_notify_channel.rs  unlurk.rs
src/model/: book.rs  mod.rs  user.rs
