[package]
name = "bookcreep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "bookcreep"

[dependencies]
anyhow = "1.0.58"
chrono = "0.4.19"
reqwest = { version = "0.11.11" }
rss = "2.0.1"
scraper = "0.13.0"
serenity = {version = "0.11.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework"] }
sqlx = { version = "0.6.0", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "chrono", "macros", "migrate", "offline" ] }
tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread", "time"] }

