[package]
name = "bookcreep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "bookcreep"

[dependencies]
anyhow = "1.0.58"
chrono = "0.4.19"
governor = "0.4.2"
nonzero_ext = "0.3.0"
quick-xml = { version = "0.23.0", features = ["serialize"] }
reqwest = { version = "0.11.11" }
serde =  {version = "1.0", features = [ "derive" ] }
serenity = {version = "0.11.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "framework", "standard_framework"] }
sqlx = { version = "0.6.0", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "chrono", "macros", "migrate", "offline" ] }
tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread", "time", "signal"] }

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"

[dev-dependencies]
wiremock = "0.5"
claim = { git = "https://github.com/Turbo87/rust-claim.git", rev = "23892a3" }